# claude-tmux-hop

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  hop.tmux  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/version-bump/: SKILL.md
.github/workflows/: publish.yml
claude-plugin/: README.md
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/hooks/: hooks.json
hooks/: hooks.json
skills/hop-config/: SKILL.md
skills/hop-dispatch/: SKILL.md
skills/hop-status/: SKILL.md
src/claude_tmux_hop/: __init__.py  __main__.py  cli.py  doctor.py  inbox.py  install.py  log.py  parser.py  paths.py  priority.py  sync.py  testing.py  tmux.py
src/claude_tmux_hop/notify/: __init__.py  base.py  linux.py  macos.py  terminals.py  windows.py
